minhas_policiesss/observability/floodgate-allow-log-shipper-logging-to-log-aggregator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-allow-log-shipper-logging-to-log-aggregator
  namespace: observability
  labels:
    managed-by: floodgate
    floodgate-policy-type: allow
    source-workload: log-shipper
    source-namespace: logging
    target-service: log-aggregator
    target-port: '8080'
spec:
  podSelector:
    matchLabels:
      app: log-aggregator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: logging
          podSelector:
            matchLabels:
              app: log-shipper
      ports:
        - port: 8080
          protocol: TCP
