minhas_policiesss/observability/floodgate-egress-internet-observability.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-egress-internet-observability
  namespace: observability
  labels:
    managed-by: floodgate
    floodgate-policy-type: allow-egress
    source-workload: ''
    source-namespace: observability
    target-service: internet
    target-port: '80'
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 100.64.0.0/10
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
