minhas_policiesss/observability/floodgate-ns-deny-ingress-observability.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-ns-deny-ingress-observability
  namespace: observability
  labels:
    managed-by: floodgate
    floodgate-policy-type: restrict-ingress
    source-workload: ''
    source-namespace: ''
    target-service: ''
    target-port: '0'
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
